@@ -1,3 +1,9 @@
+2007-12-06  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* pj_factors.c: in the case of phi=90, the derived should be calculated
+	at [90-delta,90] instead of at [90,90+delta] (the same is true for -90)
+	http://bugzilla.remotesensing.org/show_bug.cgi?id=1605
+	
 2007-12-03  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* pj_transform.c: Small improvement in WGS84_ES precision to avoid
